--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,6 @@
 # your domain
-domain: example.com   # or example.com:9443 for reserve proxy server
-port:                 # default 12580
+domain: 0.0.0.0   # or example.com:9443 for reserve proxy server
+port: 80                # default 12580
 
 # source list file
 source-files:
